examples/test/testpolicy3871.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3871
  namespace: namespace115
spec:
  podSelector:
    matchLabels:
      key28: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value35
          key36: value21
      podSelector:
        matchLabels:
          key6: value25
          key29: value43
